fix wrong align

--- a/src/pages/portfolio/Photography.module.css
+++ b/src/pages/portfolio/Photography.module.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  align-items: flex-end;
 }
 
 .HeaderPhoto {
